# aetna

./: .gitignore  CURRENT_ASSESSMENT.md  Cargo.toml  DESIGN_RATIONALE.md  ITERATION_LOG.md  LIBRARY_VISION.md  POLISH_CALIBRATION.md  README.md  SHADER_VISION.md  TODO.md  V5.md  V5_3.md
attempts/attempt_1/: Cargo.toml  NEXT_STEPS.md  OPUS_REVIEW.md
attempts/attempt_1/examples/: git_dashboard.rs
attempts/attempt_1/src/: lib.rs
attempts/attempt_3/: Cargo.toml
attempts/attempt_3/examples/: branch_sidebar.rs  button_states.rs  settings.rs
attempts/attempt_3/src/: bundle.rs  button.rs  card.rs  inspect.rs  layout.rs  lib.rs  lint.rs  patch.rs  render.rs  text.rs  tokens.rs  tree.rs
attempts/attempt_4/: Cargo.toml  LIBRARY_VISION.md  SHADER_VISION.md
attempts/attempt_4/examples/: custom_shader.rs  modal.rs  scroll_list.rs  settings.rs
attempts/attempt_4/fonts/: LICENSE.txt
attempts/attempt_4/src/: anim.rs  button.rs  draw_ops.rs  event.rs  inspect.rs  ir.rs  layout.rs  lib.rs  lint.rs  manifest.rs  shader.rs  style.rs  svg.rs  tokens.rs  tree.rs  wgpu_render.rs
attempts/attempt_4_demo/: Cargo.toml
attempts/attempt_4_demo/src/: lib.rs
crates/aetna-android/: Cargo.toml
crates/aetna-android-showcase/: Cargo.toml
crates/aetna-android-showcase/src/: lib.rs
crates/aetna-android/src/: lib.rs
crates/aetna-core/: Cargo.toml  README.md
crates/aetna-core/examples/: circular_layout.rs  custom_paint.rs  custom_shader.rs  dashboard_01_calibration.rs  density_calibration.rs  font_family_comparison.rs  inline_runs.rs  inline_runs_highlight.rs  long_form_content.rs  modal.rs  palette_demo.rs  polish_calibration.rs  scroll_list.rs  scrollbar.rs  settings.rs  settings_calibration.rs  toast.rs  virtual_list.rs
crates/aetna-core/shaders/: gradient.wgsl  icon_line.wgsl  image.wgsl  progress_indeterminate.wgsl  rounded_rect.wgsl  skeleton.wgsl  spinner.wgsl  surface.wgsl  text.wgsl  text_highlight.wgsl  text_msdf.wgsl  vector.wgsl  vector_glass.wgsl  vector_relief.wgsl
crates/aetna-core/src/: affine.rs  anim.rs  bundle.rs  clipboard.rs  cursor.rs  draw_ops.rs  event.rs  focus.rs  hit_test.rs  icon_msdf.rs  icon_msdf_atlas.rs  icons.rs  image.rs  inspect.rs  ir.rs  layout.rs  lib.rs  lint.rs  manifest.rs  math.rs  metrics.rs  overlay.rs  paint.rs  palette.rs  prelude.rs  profile.rs  runtime.rs  scroll.rs  selection.rs  shader.rs  state.rs  style.rs  surface.rs  svg.rs  svg_icon.rs  text_atlas.rs  text_metrics.rs  theme.rs  toast.rs  tokens.rs  (+5 more)
crates/aetna-core/src/anim/: mod.rs  tick.rs
crates/aetna-core/src/bundle/: artifact.rs  inspect.rs  lint.rs  manifest.rs  mod.rs  svg.rs
crates/aetna-core/src/icons/: mod.rs  msdf.rs  msdf_atlas.rs  svg.rs
crates/aetna-core/src/paint/: draw_ops.rs  mod.rs  shader.rs  surface.rs
crates/aetna-core/src/state/: animation.rs  click.rs  cursor.rs  focus.rs  interaction.rs  keyboard.rs  query.rs  scroll.rs  selection.rs  tests.rs  toast.rs  types.rs  widget_state.rs
crates/aetna-core/src/text/: atlas.rs  inline_mixed.rs  metrics.rs  mod.rs  msdf.rs  msdf_atlas.rs
crates/aetna-core/src/theme/: mod.rs  palette.rs  style.rs  tokens.rs
crates/aetna-core/src/tree/: color.rs  constructors.rs  content.rs  defaults.rs  geometry.rs  icon_name.rs  identity.rs  layout_modifiers.rs  layout_types.rs  mod.rs  node.rs  semantics.rs  text_types.rs  types.rs  visual_modifiers.rs
crates/aetna-core/src/widgets/: accordion.rs  alert.rs  avatar.rs  badge.rs  blockquote.rs  breadcrumb.rs  button.rs  (+37 more)
crates/aetna-demo/: Cargo.toml
crates/aetna-demo/shaders/: liquid_backdrop_lab.wgsl  liquid_glass.wgsl  liquid_glass_lab.wgsl
crates/aetna-demo/src/: icon_gallery.rs  lib.rs  liquid_glass_lab.rs  showcase.rs  text_quality.rs
crates/aetna-fixtures/: Cargo.toml  README.md
crates/aetna-fixtures/shaders/: liquid_glass.wgsl
crates/aetna-fixtures/src/: hero.rs  icon_gallery.rs  lib.rs  liquid_glass_lab.rs  showcase.rs  text_quality.rs
crates/aetna-fonts/: Cargo.toml  README.md
crates/aetna-fonts-emoji/: Cargo.toml  README.md
crates/aetna-fonts-emoji/src/: lib.rs
crates/aetna-fonts-inter/: Cargo.toml  README.md
crates/aetna-fonts-inter/src/: lib.rs
crates/aetna-fonts-jetbrains-mono/: Cargo.toml  README.md
crates/aetna-fonts-jetbrains-mono/src/: lib.rs
crates/aetna-fonts-roboto/: Cargo.toml  README.md
crates/aetna-fonts-roboto/src/: lib.rs
crates/aetna-fonts-symbols/: Cargo.toml  README.md
crates/aetna-fonts-symbols/src/: lib.rs
crates/aetna-fonts/fonts/: LICENSE-Roboto.txt
crates/aetna-fonts/src/: lib.rs
crates/aetna-ios-showcase/: Cargo.toml
crates/aetna-ios-showcase/src/: lib.rs
crates/aetna-markdown/: Cargo.toml
crates/aetna-markdown/examples/: markdown_basic.rs  markdown_math.rs  markdown_math_stress.rs
crates/aetna-markdown/src/: highlight.rs  lib.rs  transformer.rs
crates/aetna-vulkano/: Cargo.toml  README.md
crates/aetna-vulkano-demo/: Cargo.toml
crates/aetna-vulkano-demo/src/: lib.rs
crates/aetna-vulkano/src/: icon.rs  image.rs  instance.rs  lib.rs  naga_compile.rs  pipeline.rs  runner.rs  surface.rs  text.rs
crates/aetna-web/: Cargo.toml  README.md  index.html
crates/aetna-web-showcase/: Cargo.toml  README.md  index.html
crates/aetna-web-showcase/src/: lib.rs
crates/aetna-web/assets/: index.html
crates/aetna-web/src/: lib.rs
crates/aetna-wgpu/: Cargo.toml  README.md
crates/aetna-wgpu/examples/: render_counter.rs  render_custom.rs  render_custom_paint.rs  render_emoji.rs  render_icon_gallery.rs  render_inline_runs.rs  render_inline_runs_highlight.rs  render_liquid_glass.rs  render_liquid_glass_lab.rs  render_png.rs  render_scrollbar.rs  render_showcase_glass.rs  render_showcase_media.rs  render_surface.rs  render_text_quality.rs  render_toast.rs  render_vector.rs
crates/aetna-wgpu/src/: icon.rs  image.rs  instance.rs  lib.rs  msaa.rs  pipeline.rs  surface.rs  text.rs
crates/aetna-winit-wgpu/: Cargo.toml  README.md
crates/aetna-winit-wgpu/src/: lib.rs
examples/: Cargo.toml
tools/: Cargo.toml  aetna-fontconfig.conf  build_test_colr_font.py  build_web.sh  render  svg_to_png.sh
(+76 files in other folders)
