[package]
name = "aetna-examples"
version = "0.3.0"
edition = "2024"
description = "Aetna — interactive examples built from the reusable host and fixture crates"
license = "MIT OR Apache-2.0"
publish = false

# Binaries auto-discovered from `src/bin/*.rs`.

[dependencies]
aetna-core = { version = "0.3.0", path = "../crates/aetna-core" }
aetna-fixtures = { version = "0.3.0", path = "../crates/aetna-fixtures" }
aetna-wgpu = { version = "0.3.0", path = "../crates/aetna-wgpu" }
aetna-winit-wgpu = { version = "0.3.0", path = "../crates/aetna-winit-wgpu" }
wgpu = "29"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# `wayland-data-control` is required so arboard talks to native
# Wayland apps via the wlr data-control protocol. Without it,
# arboard falls back to X11 over XWayland and only round-trips
# clipboard contents between XWayland apps — copies in our app
# don't reach Firefox / gedit / alacritty when those run under
# native Wayland.
arboard = { version = "3", features = ["wayland-data-control"] }
