[package]
name = "aetna-examples"
version = "0.3.5"
edition = "2024"
description = "Aetna — interactive examples built from the reusable host and fixture crates"
license = "MIT OR Apache-2.0"
publish = false

# Binaries auto-discovered from `src/bin/*.rs`.

[[bin]]
name = "counter"
path = "src/bin/counter.rs"
doc = false

[[bin]]
name = "icon_gallery"
path = "src/bin/icon_gallery.rs"
doc = false

[[bin]]
name = "icon_gallery_glass"
path = "src/bin/icon_gallery_glass.rs"
doc = false

[[bin]]
name = "icon_gallery_relief"
path = "src/bin/icon_gallery_relief.rs"
doc = false

[[bin]]
name = "showcase"
path = "src/bin/showcase.rs"
doc = false

[dependencies]
aetna-core = { version = "0.3.5", path = "../crates/aetna-core" }
aetna-fixtures = { version = "0.3.5", path = "../crates/aetna-fixtures" }
aetna-markdown = { version = "0.3.5", path = "../crates/aetna-markdown" }
aetna-wgpu = { version = "0.3.5", path = "../crates/aetna-wgpu" }
aetna-winit-wgpu = { version = "0.3.5", path = "../crates/aetna-winit-wgpu" }
wgpu = "29"
# Off by default. The `profiling` feature pulls these in and forwards
# `aetna-winit-wgpu/profiling` (which transitively turns on the wgpu
# backend + core spans). The showcase binary's `--profile <path>` flag
# attaches `tracing-chrome` and writes a chrome://tracing JSON.
tracing = { version = "0.1", optional = true }
tracing-chrome = { version = "0.7", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[features]
profiling = [
    "dep:tracing",
    "dep:tracing-chrome",
    "dep:tracing-subscriber",
    "aetna-winit-wgpu/profiling",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# `wayland-data-control` is required so arboard talks to native
# Wayland apps via the wlr data-control protocol. Without it,
# arboard falls back to X11 over XWayland and only round-trips
# clipboard contents between XWayland apps — copies in our app
# don't reach Firefox / gedit / alacritty when those run under
# native Wayland.
arboard = { version = "3", features = ["wayland-data-control"] }
