[package]
name = "aetna-tools"
version = "0.1.0"
edition = "2024"
description = "Aetna — local diagnostic and backend comparison tools"
license = "MIT OR Apache-2.0"
publish = false

# Binaries auto-discovered from `src/bin/*.rs`.

[dependencies]
aetna-core = { path = "../crates/aetna-core" }
aetna-fixtures = { path = "../crates/aetna-fixtures" }
aetna-fonts = { path = "../crates/aetna-fonts" }
cosmic-text = "0.19"
png = "0.18"
ttf-parser = "0.25.1"
