[package]
name = "aetna-tools"
version = "0.2.0"
edition = "2024"
description = "Aetna — local diagnostic and backend comparison tools"
license = "MIT OR Apache-2.0"
publish = false

# Binaries auto-discovered from `src/bin/*.rs`.

[features]
# Pass-through to aetna-core's build-time light-mode palette. Enable
# with `--features light_theme` on any of the render binaries to dump
# Aetna Light artifacts.
light_theme = ["aetna-core/light_theme"]

[dependencies]
aetna-core = { version = "0.2.0", path = "../crates/aetna-core" }
aetna-fixtures = { version = "0.2.0", path = "../crates/aetna-fixtures" }
aetna-fonts = { version = "0.2.0", path = "../crates/aetna-fonts" }
aetna-wgpu = { version = "0.2.0", path = "../crates/aetna-wgpu" }
cosmic-text = "0.19"
png = "0.18"
pollster = "0.4"
ttf-parser = "0.25.1"
wgpu = "29"
