[package]
name = "attempt_4"
version = "0.1.0"
edition = "2024"
description = "Attempt 4: shader-first wgpu/vulkano UI library for LLM authoring"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[example]]
name = "settings"
path = "examples/settings.rs"

[dependencies]
wgpu = "23"
bytemuck = { version = "1.21", features = ["derive"] }
# glyphon (for stock::text_sdf) lands in the next slice.
# naga is pulled in transitively by wgpu for wgsl→spirv when targeting
# vulkano in a later slice.
