[package]
name = "aetna-android-showcase"
version = "0.3.5"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aetna Android showcase app entry point"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "main"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
aetna-android = { version = "0.3.5", path = "../aetna-android" }
aetna-core = { version = "0.3.5", path = "../aetna-core" }
aetna-fixtures = { version = "0.3.5", path = "../aetna-fixtures" }

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30", features = ["android-native-activity"] }
