[package]
name = "aetna-android"
version = "0.3.5"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aetna Android host shell for native wgpu apps"
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
aetna-core = { version = "0.3.5", path = "../aetna-core" }
aetna-winit-wgpu = { version = "0.3.5", path = "../aetna-winit-wgpu" }
winit = { version = "0.30", features = ["android-native-activity"] }
