[package]
name = "aetna-core"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aetna — backend-agnostic UI library core"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/aetna-core"
keywords = ["ui", "gui", "widgets", "framework", "renderer"]
categories = ["gui", "rendering"]

[lib]
path = "src/lib.rs"

[dependencies]
aetna-fonts = { version = "0.3.1", path = "../aetna-fonts", default-features = false }
bytemuck = { version = "1", features = ["derive"] }
cosmic-text = "0.19"
fdsm = "0.8"
fdsm-ttf-parser = "0.2"
image = { version = "0.25", default-features = false }
kurbo = "0.13"
lyon_tessellation = "1.0.20"
nalgebra = { version = "0.34", default-features = false, features = ["std"] }
swash = "0.2"
ttf-parser = "0.25.1"
usvg = { version = "0.47.0", default-features = false }
# `Instant` that works on wasm32 (browser has no monotonic clock; std's
# Instant::now() panics). API-identical to std::time::Instant on native.
web-time = "1"

[features]
default = ["default_fonts"]
# Bundle aetna-fonts' default font set (Inter + JetBrains Mono +
# NotoColorEmoji + Symbols2 + Math) into the binary. Disable to ship
# your own fonts via `register_font`. The per-format features below are
# activated by `default_fonts` and can also be toggled individually —
# Roboto is no longer in the default set but remains available via the
# `roboto` feature for Material-style applications:
# `aetna-core = { default-features = false, features = ["roboto"] }`.
default_fonts = ["inter", "jetbrains-mono", "emoji", "symbols"]
inter = ["aetna-fonts/inter"]
jetbrains-mono = ["aetna-fonts/jetbrains-mono"]
roboto = ["aetna-fonts/roboto"]
emoji = ["aetna-fonts/emoji"]
symbols = ["aetna-fonts/symbols"]

[[example]]
name = "settings"
path = "examples/settings.rs"

# Roboto is no longer in `default_fonts`. The Inter↔Roboto comparison
# example genuinely needs it, so it's gated behind the `roboto` feature
# rather than rendering an empty Roboto column on a default build.
[[example]]
name = "font_family_comparison"
path = "examples/font_family_comparison.rs"
required-features = ["roboto"]
