[package]
name = "aetna-core"
version = "0.3.5"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aetna — backend-agnostic UI library core"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/aetna-core"
keywords = ["ui", "gui", "widgets", "framework", "renderer"]
categories = ["gui", "rendering"]

[lib]
path = "src/lib.rs"

[dependencies]
aetna-fonts = { version = "0.3.5", path = "../aetna-fonts", default-features = false }
bytemuck = { version = "1", features = ["derive"] }
cosmic-text = "0.19"
fdsm = "0.8"
fdsm-ttf-parser = "0.2"
image = { version = "0.25", default-features = false }
kurbo = "0.13"
# Bounded LRU cache for shaped `TextLayout`s. Without it, every text
# node in the tree triggers a fresh cosmic-text shape on each frame
# (twice per intrinsic call) — reshaping the same labels over and over
# was a measurable share of the layout pass. Cache hit avoids buffer
# alloc, set_text, shape, and the layout-runs walk.
lru = "0.18"
lyon_tessellation = "1.0.20"
nalgebra = { version = "0.34", default-features = false, features = ["std"] }
# FxHash via rustc-hash for the per-frame side maps (computed_rects,
# key_index, interaction state, scroll). Default `RandomState` is
# SipHash-1-3, cryptographic-grade — gross overkill for short owned
# strings keyed by tree path. FxHash is a non-cryptographic
# multiply-then-rotate hash that's a few times faster on the strings we
# actually use, and the layout pass touches these maps once per node
# per frame.
rustc-hash = "2"
roxmltree = "0.21"
swash = "0.2"
ttf-parser = "0.25.1"
# Optional — pulled in only when the `profiling` feature is on.
# Drives the `profile_span!` macro; off-builds compile away to ().
tracing = { version = "0.1", optional = true }
usvg = { version = "0.47.0", default-features = false }
# `Instant` that works on wasm32 (browser has no monotonic clock; std's
# Instant::now() panics). API-identical to std::time::Instant on native.
web-time = "1"

[features]
default = ["default_fonts"]
# Lights up the `profile_span!` macro across aetna-core (and any
# downstream crate that mirrors the feature). When off, every span call
# expands to `()` and the `tracing` dep is not pulled in — release
# builds carry zero overhead. When on, spans nest naturally and a host
# subscriber (typically `tracing-chrome` for chrome://tracing /
# perfetto) receives them. See `aetna_core::profile`.
profiling = ["dep:tracing"]
# Bundle aetna-fonts' default font set (Inter + JetBrains Mono +
# NotoColorEmoji + Symbols2 + Math) into the binary. Disable to ship
# your own fonts via `register_font`. The per-format features below are
# activated by `default_fonts` and can also be toggled individually —
# Roboto is no longer in the default set but remains available via the
# `roboto` feature for Material-style applications:
# `aetna-core = { default-features = false, features = ["roboto"] }`.
default_fonts = ["inter", "jetbrains-mono", "emoji", "symbols"]
inter = ["aetna-fonts/inter"]
jetbrains-mono = ["aetna-fonts/jetbrains-mono"]
roboto = ["aetna-fonts/roboto"]
emoji = ["aetna-fonts/emoji"]
symbols = ["aetna-fonts/symbols"]

[[example]]
name = "settings"
path = "examples/settings.rs"

# Roboto is no longer in `default_fonts`. The Inter↔Roboto comparison
# example genuinely needs it, so it's gated behind the `roboto` feature
# rather than rendering an empty Roboto column on a default build.
[[example]]
name = "font_family_comparison"
path = "examples/font_family_comparison.rs"
required-features = ["roboto"]
