[package]
name = "aetna-demo"
version = "0.1.0"
edition = "2024"
description = "Aetna — winit harness and demo binaries"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

# Binaries auto-discovered from `src/bin/*.rs`.

[dependencies]
aetna-core = { path = "../aetna-core" }
aetna-wgpu = { path = "../aetna-wgpu" }
wgpu = "23"
winit = "0.30"
pollster = "0.4"
png = "0.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3"
