[package]
name = "aetna-demo"
version = "0.1.0"
edition = "2024"
description = "Aetna — wgpu demo binaries and compatibility re-exports"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

# Binaries auto-discovered from `src/bin/*.rs`.

[dependencies]
aetna-core = { path = "../aetna-core" }
aetna-fixtures = { path = "../aetna-fixtures" }
aetna-fonts = { path = "../aetna-fonts" }
aetna-winit-wgpu = { path = "../aetna-winit-wgpu" }
aetna-wgpu = { path = "../aetna-wgpu" }
cosmic-text = "0.19"
ttf-parser = "0.25.1"
wgpu = "29"
winit = "0.30"
pollster = "0.4"
png = "0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3"
