[package]
name = "aetna-fixtures"
version = "0.3.3"
edition = "2024"
description = "Aetna — backend-neutral showcase apps and render fixtures"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
aetna-core = { version = "0.3.3", path = "../aetna-core" }
aetna-markdown = { version = "0.3.3", path = "../aetna-markdown" }
