[package]
name = "aetna-fonts-emoji"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "NotoColorEmoji (CBDT color bitmap) bundled for Aetna"
license = "(MIT OR Apache-2.0) AND OFL-1.1"
readme = "README.md"
documentation = "https://docs.rs/aetna-fonts-emoji"
keywords = ["fonts", "ui", "emoji", "noto", "typography"]
categories = ["gui"]
include = [
    "src/**/*.rs",
    "fonts/NotoColorEmoji.ttf",
    "fonts/LICENSE-NotoColorEmoji.txt",
    "fonts/LICENSE-NotoFonts.txt",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
path = "src/lib.rs"
