[package]
name = "aetna-fonts-inter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Inter Variable bundled for Aetna"
license = "(MIT OR Apache-2.0) AND OFL-1.1"
readme = "README.md"
documentation = "https://docs.rs/aetna-fonts-inter"
keywords = ["fonts", "inter", "ui", "typography"]
categories = ["gui"]
include = [
    "src/**/*.rs",
    "fonts/InterVariable*.ttf",
    "fonts/LICENSE-Inter.txt",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
path = "src/lib.rs"
