[package]
name = "aetna-fonts-roboto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Roboto Regular / Medium / Bold / Italic bundled for Aetna"
license = "(MIT OR Apache-2.0) AND Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/aetna-fonts-roboto"
keywords = ["fonts", "ui", "roboto", "typography"]
categories = ["gui"]
include = [
    "src/**/*.rs",
    "fonts/Roboto-*.ttf",
    "fonts/LICENSE-Roboto.txt",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
path = "src/lib.rs"
