[package]
name = "aetna-fonts-symbols"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "NotoSans Symbols2 + Math fallback faces bundled for Aetna"
license = "(MIT OR Apache-2.0) AND OFL-1.1"
readme = "README.md"
documentation = "https://docs.rs/aetna-fonts-symbols"
keywords = ["fonts", "ui", "symbols", "noto", "typography"]
categories = ["gui"]
include = [
    "src/**/*.rs",
    "fonts/NotoSansSymbols2-Regular.ttf",
    "fonts/NotoSansMath-Regular.ttf",
    "fonts/LICENSE-NotoFonts.txt",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
path = "src/lib.rs"
