[package]
name = "aetna-fonts"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bundled font assets for Aetna (Roboto + Noto fallback faces)"
license = "(MIT OR Apache-2.0) AND Apache-2.0 AND OFL-1.1"
readme = "README.md"
documentation = "https://docs.rs/aetna-fonts"
keywords = ["fonts", "ui", "noto", "roboto", "typography"]
categories = ["gui"]
include = [
    "src/**/*.rs",
    "fonts/**",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
path = "src/lib.rs"

[features]
# Generous LLM-friendly default: Latin + color emoji + arrows/math/
# box-drawing. CJK is opt-in because it adds ~16 MB to the binary.
default = ["default_fonts"]
default_fonts = ["roboto", "emoji", "symbols"]
roboto = []
# NotoColorEmoji (CBDT bitmaps). Requires aetna-core's atlas RGBA path
# (introduced alongside this feature) to render in color rather than as
# B&W silhouettes.
emoji = []
symbols = []
cjk = []
