[package]
name = "aetna-fonts"
version = "0.3.3"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bundled font assets for Aetna (Inter, JetBrains Mono, Roboto, and Noto fallback faces)"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/aetna-fonts"
keywords = ["fonts", "ui", "inter", "noto", "typography"]
categories = ["gui"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
path = "src/lib.rs"

[features]
# Generous LLM-friendly default: Latin + color emoji + arrows / math /
# box-drawing. Each feature pulls in a sibling crate that bundles the
# matching font family — split out so each published `.crate`
# artifact stays under crates.io's per-crate upload size limit.
default = ["default_fonts"]
default_fonts = ["inter", "jetbrains-mono", "emoji", "symbols"]
inter = ["dep:aetna-fonts-inter"]
jetbrains-mono = ["dep:aetna-fonts-jetbrains-mono"]
roboto = ["dep:aetna-fonts-roboto"]
# NotoColorEmoji (CBDT bitmaps). Requires aetna-core's atlas RGBA path
# (introduced alongside this feature) to render in color rather than as
# B&W silhouettes.
emoji = ["dep:aetna-fonts-emoji"]
symbols = ["dep:aetna-fonts-symbols"]

[dependencies]
aetna-fonts-inter = { version = "0.1.0", path = "../aetna-fonts-inter", optional = true }
aetna-fonts-jetbrains-mono = { version = "0.1.0", path = "../aetna-fonts-jetbrains-mono", optional = true }
aetna-fonts-roboto = { version = "0.1.0", path = "../aetna-fonts-roboto", optional = true }
aetna-fonts-emoji = { version = "0.1.0", path = "../aetna-fonts-emoji", optional = true }
aetna-fonts-symbols = { version = "0.1.0", path = "../aetna-fonts-symbols", optional = true }
