[package]
name = "aetna-ios-showcase"
version = "0.3.5"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aetna iOS showcase app entry point"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "aetna_ios_showcase"
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"

[dependencies]
aetna-core = { version = "0.3.5", path = "../aetna-core" }
aetna-fixtures = { version = "0.3.5", path = "../aetna-fixtures" }
aetna-ios = { version = "0.3.5", path = "../aetna-ios" }
