[package]
name = "aetna-markdown"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aetna — markdown to El tree transformer"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
aetna-core = { version = "0.3.0", path = "../aetna-core" }
pulldown-cmark = { version = "0.13.3", default-features = false }
