[package]
name = "aetna-markdown"
version = "0.3.4"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aetna — markdown to El tree transformer"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[features]
# `highlighting` pulls in `syntect` (regex-fancy backend, no `onig` C
# dependency) and `two-face` for an extra grammar set on top of
# syntect's defaults. Default-on so `aetna_markdown::md(...)` ships
# highlighted fenced code out of the box; `default-features = false`
# opts out of the highlighter entirely (and saves ~1 MB of bundled
# syntax dumps + ~5 deps in the build graph).
default = ["highlighting"]
highlighting = ["dep:syntect", "dep:two-face"]

[dependencies]
aetna-core = { version = "0.3.4", path = "../aetna-core" }
pulldown-cmark = { version = "0.13.3", default-features = false }
# Pure-Rust regex backend; pulled in only with the `highlighting`
# feature. We use the parsing path (ParseState + ScopeStack) and skip
# syntect's themes so we can map scopes to Aetna palette tokens
# directly — palette swaps recolour the syntax run automatically.
syntect = { version = "5.3", optional = true, default-features = false, features = ["parsing", "default-syntaxes", "regex-fancy", "dump-load"] }
# Extra grammars that the syntect default set lacks (Rust beyond
# Sublime defaults, TOML, GraphQL, Dockerfile, etc.). We pull in only
# the syntect-fancy feature so the regex backend matches the syntect
# above; we don't use two-face's themes.
two-face = { version = "0.5", optional = true, default-features = false, features = ["syntect-fancy"] }
