[package]
name = "aetna-vulkano-demo"
version = "0.3.1"
edition = "2024"
description = "Aetna — vulkano native winit harness and backend parity tools"
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

# Binaries auto-discovered from `src/bin/*.rs`.

[dependencies]
aetna-core = { version = "0.3.1", path = "../aetna-core" }
aetna-fixtures = { version = "0.3.1", path = "../aetna-fixtures" }
aetna-vulkano = { version = "0.3.1", path = "../aetna-vulkano" }
png = "0.18"
vulkano = "0.35"
winit = "0.30"

[dev-dependencies]
aetna-wgpu = { version = "0.3.1", path = "../aetna-wgpu" }
