[package]
name = "aetna-vulkano-demo"
version = "0.3.5"
edition = "2024"
description = "Aetna — vulkano native winit harness and backend parity tools"
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

# Binaries auto-discovered from `src/bin/*.rs`.

[[bin]]
name = "counter"
path = "src/bin/counter.rs"
doc = false

[[bin]]
name = "icon_gallery"
path = "src/bin/icon_gallery.rs"
doc = false

[[bin]]
name = "icon_gallery_glass"
path = "src/bin/icon_gallery_glass.rs"
doc = false

[[bin]]
name = "icon_gallery_relief"
path = "src/bin/icon_gallery_relief.rs"
doc = false

[[bin]]
name = "showcase"
path = "src/bin/showcase.rs"
doc = false

[[bin]]
name = "render_icon_gallery"
path = "src/bin/render_icon_gallery.rs"
doc = false

[[bin]]
name = "render_text_quality"
path = "src/bin/render_text_quality.rs"
doc = false

[dependencies]
aetna-core = { version = "0.3.5", path = "../aetna-core" }
aetna-fixtures = { version = "0.3.5", path = "../aetna-fixtures" }
aetna-vulkano = { version = "0.3.5", path = "../aetna-vulkano" }
png = "0.18"
vulkano = "0.35"
winit = "0.30"

[dev-dependencies]
aetna-wgpu = { version = "0.3.5", path = "../aetna-wgpu" }
