[package]
name = "aetna-vulkano"
version = "0.1.0"
edition = "2024"
description = "Aetna — Vulkan backend via vulkano + naga WGSL→SPIR-V (native only)"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
aetna-core = { path = "../aetna-core" }
# Pinned to match wgpu 23.x's bundled naga so the two backends parse
# WGSL identically and a shader that compiles for one compiles for both.
naga = { version = "23.1", features = ["wgsl-in", "spv-out"] }
vulkano = "0.35"
bytemuck = { version = "1.21", features = ["derive"] }
smallvec = "1"
