[package]
name = "aetna-vulkano"
version = "0.1.0"
edition = "2024"
description = "Aetna — Vulkan backend via vulkano + naga WGSL→SPIR-V (native only)"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/aetna-vulkano"

[lib]
path = "src/lib.rs"

[dependencies]
aetna-core = { path = "../aetna-core" }
# Pinned to match wgpu 29.x's bundled naga so the two backends parse
# WGSL identically and a shader that compiles for one compiles for both.
naga = { version = "29", features = ["wgsl-in", "spv-out"] }
vulkano = "0.35"
bytemuck = { version = "1.21", features = ["derive"] }
smallvec = "1"
cosmic-text = "0.19"
ttf-parser = "0.25.1"
