[package]
name = "aetna-web-showcase"
version = "0.3.3"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aetna — browser showcase demo"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aetna-fixtures = { version = "0.3.3", path = "../aetna-fixtures" }
aetna-web = { version = "0.3.3", path = "../aetna-web" }

[features]
profiling = ["aetna-web/profiling"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
