[package]
name = "aetna-web"
version = "0.3.1"
edition = "2024"
description = "Aetna — wasm browser entry point for the shared Showcase app"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"

[lib]
# `cdylib` is what `wasm-pack build --target web` ships to the browser;
# `rlib` keeps the shared web entry importable by docs/tests. Native
# parity now runs through `aetna-examples` and `aetna-vulkano-demo`.
crate-type = ["cdylib", "rlib"]

[dependencies]
aetna-core = { version = "0.3.1", path = "../aetna-core" }
aetna-wgpu = { version = "0.3.1", path = "../aetna-wgpu" }
# `aetna-fixtures` is the home of the shared `Showcase` App impl;
# depending on it from native, vulkano, and wasm gives every target one
# backend-neutral fixture without pulling in a native demo harness.
aetna-fixtures = { version = "0.3.1", path = "../aetna-fixtures" }
wgpu = "29"
winit = "0.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen is the FFI bridge wasm-pack consumes.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
js-sys = "0.3"
# `web_time::Instant` is a wasm-safe shim for `std::time::Instant`
# (the std one panics on wasm32). Used here for the per-frame
# timing breakdown.
web-time = "1"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
# Browser wgpu backends — workspace's plain `wgpu = "29"` only enables
# native backends.
wgpu = { version = "29", features = ["webgl"] }
